--- a/views/post_form.ejs
+++ b/views/post_form.ejs
@@ -4,6 +4,7 @@
 	<title>Create New Post</title>
 </head>
 <body>
+	<a href='/posts'>See All Posts</a>
 	<form method='post' actioln='/create-new-post'>
 		<p>Title: <input type='text' name='title'/>
 		<p>Body: <input type='text' name='body'/>
