add more stuff to node_mvc

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -16,6 +16,9 @@
     <!-- Custom styles for this template -->
     <link href="/stylesheets/justified-nav.css" rel="stylesheet">
 
+    <!-- Custom styles for page -->
+    <link href="/stylesheets/<% if (locals.style) {%><%=style%><%}%>" rel="stylesheet">
+
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
